--- a/portal/html/USR-02-04-B-LIST.html
+++ b/portal/html/USR-02-04-B-LIST.html
@@ -316,14 +316,14 @@
                     <h3>FAQ</h3>
                 </div>
     
-                <div class="board_infobox">
+                <!-- <div class="board_infobox">
                     <div class="total"></div>
                     <div class="search_box">
                         <label for="search_box_01" class="hidden">검색어 입력</label>
                         <input type="text" id="search_box_01" placeholder="검색어를 입력해주세요.">
                         <button>검색</button>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="tab_group">
                     <div class="tab_btn">
